fix the incorrect scrollbar style of text in the article and comment section

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -5,5 +5,5 @@
 
 /* avoid latex overflow */
 .prose p {
-  overflow: scroll;
+  overflow: auto;
 }
